[gd_scene load_steps=30 format=2]

[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/background/ipad~cloud_MD.png" type="Texture" id=1]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/background/ipad~cloud_SM.png" type="Texture" id=2]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/background/ipad~sky.png" type="Texture" id=3]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/background/ipad~pinwheel.png" type="Texture" id=4]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/background/ipad~cloud_LG.png" type="Texture" id=5]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/background/ipad~treelayerright.png" type="Texture" id=6]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/background/ipad~ground.png" type="Texture" id=7]
[ext_resource path="res://aux/assets/textures/ui/eden1/menu/ani_menu/eden_menu_header.png" type="Texture" id=8]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/ipad~share_world.png" type="Texture" id=9]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/ipad~load_world.png" type="Texture" id=10]
[ext_resource path="res://src/scripts/interface/eden1/background.gd" type="Script" id=11]
[ext_resource path="res://src/scripts/interface/eden1/foreground.gd" type="Script" id=12]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/ipad~eden_menu_header.png" type="Texture" id=13]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/arrows/left.png" type="Texture" id=14]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/ipad~delete_world.png" type="Texture" id=15]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/ipad~options.png" type="Texture" id=16]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/ipad~create_world.png" type="Texture" id=17]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/arrows/right.png" type="Texture" id=18]
[ext_resource path="res://aux/assets/fonts/orbitron/Orbitron Medium.otf" type="DynamicFontData" id=19]
[ext_resource path="res://src/scripts/interface/eden1/shared_worlds.gd" type="Script" id=20]
[ext_resource path="res://aux/assets/fonts/body.tres" type="DynamicFont" id=21]
[ext_resource path="res://aux/assets/textures/ui/eden2/ui_text/ipad~menu_shared_worlds.png" type="Texture" id=22]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/arrows/back.png" type="Texture" id=23]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/arrows/up.png" type="Texture" id=24]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/arrows/down.png" type="Texture" id=25]
[ext_resource path="res://aux/assets/textures/ui/eden2/ipad/main_menu/background/ipad~treelayerleft.png" type="Texture" id=26]

[sub_resource type="Animation" id=1]
resource_name = "PinWheel"
length = 30.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PinWheel:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 284, 83 )
margin_right = 50.0

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 19 )

[node name="Eden2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PinWheel" type="TextureRect" parent="Background"]
modulate = Color( 1, 1, 1, 0.0784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1440.0
margin_top = -996.833
margin_right = 1440.0
margin_bottom = 1883.17
rect_pivot_offset = Vector2( 1440, 1440 )
texture = ExtResource( 4 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" type="Node2D" parent="Background"]
position = Vector2( -209.854, 419.395 )

[node name="CloudTop" type="Node2D" parent="Background/Clouds"]
position = Vector2( 149.892, -477.946 )

[node name="CloudLG" type="CPUParticles2D" parent="Background/Clouds/CloudTop"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudMD" type="CPUParticles2D" parent="Background/Clouds/CloudTop"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudSM" type="CPUParticles2D" parent="Background/Clouds/CloudTop"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudBottom" type="Node2D" parent="Background/Clouds"]

[node name="CloudLG" type="CPUParticles2D" parent="Background/Clouds/CloudBottom"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudMD" type="CPUParticles2D" parent="Background/Clouds/CloudBottom"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="CloudSM" type="CPUParticles2D" parent="Background/Clouds/CloudBottom"]
position = Vector2( -277.183, 188.988 )
amount = 10
lifetime = 100.0
preprocess = 100.0
explosiveness = 0.24
randomness = 0.27
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2( 10, 0 )
spread = 4.47
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount_random = 1.0
hue_variation = 0.08
hue_variation_random = 0.32

[node name="Ground" type="Node2D" parent="Background"]

[node name="Mountians" type="CPUParticles2D" parent="Background/Ground"]
position = Vector2( 0, -140 )
scale = Vector2( 1.5, 1.5 )
amount = 2
lifetime = 300.0
preprocess = 600.0
texture = ExtResource( 6 )
direction = Vector2( 10, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
hue_variation = 0.08
hue_variation_random = 0.32
__meta__ = {
"_editor_description_": ""
}

[node name="Mountians2" type="CPUParticles2D" parent="Background/Ground"]
position = Vector2( 0, -140 )
scale = Vector2( 1.5, 1.5 )
amount = 2
lifetime = 300.0
preprocess = 217.0
texture = ExtResource( 26 )
direction = Vector2( 10, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
hue_variation = 0.08
hue_variation_random = 0.32
__meta__ = {
"_editor_description_": ""
}

[node name="Grass" type="CPUParticles2D" parent="Background/Ground"]
position = Vector2( 0, -20 )
amount = 10
lifetime = 600.0
preprocess = 600.0
speed_scale = 2.0
texture = ExtResource( 7 )
direction = Vector2( 10, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
hue_variation = 0.08
hue_variation_random = 0.32
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/PinWheel = SubResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxTop" type="HBoxContainer" parent="VBox"]
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="Center" type="CenterContainer" parent="VBox/HBoxTop"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )

[node name="Delete" type="TextureButton" parent="VBox/HBoxTop/Center"]
margin_left = 40.0
margin_top = 35.0
margin_right = 159.0
margin_bottom = 165.0
rect_min_size = Vector2( 119, 130 )
texture_normal = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Control" type="Control" parent="VBox/HBoxTop"]
margin_left = 204.0
margin_right = 656.0
margin_bottom = 200.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBox/HBoxTop"]
margin_left = 660.0
margin_right = 1260.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 0 )
custom_styles/pressed = SubResource( 2 )
icon = ExtResource( 13 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="VBox/HBoxTop"]
margin_left = 1264.0
margin_right = 1716.0
margin_bottom = 200.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center2" type="CenterContainer" parent="VBox/HBoxTop"]
margin_left = 1720.0
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )

[node name="Create" type="TextureButton" parent="VBox/HBoxTop/Center2"]
margin_left = 42.0
margin_top = 31.0
margin_right = 158.0
margin_bottom = 169.0
rect_min_size = Vector2( 116, 138 )
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxMiddle" type="HBoxContainer" parent="VBox"]
margin_top = 204.0
margin_right = 1920.0
margin_bottom = 876.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="CenterContainer" parent="VBox/HBoxMiddle"]
margin_right = 100.0
margin_bottom = 672.0
rect_min_size = Vector2( 100, 300 )

[node name="Left" type="TextureButton" parent="VBox/HBoxMiddle/Center"]
margin_left = 9.0
margin_top = 232.0
margin_right = 91.0
margin_bottom = 439.0
rect_min_size = Vector2( 82, 207 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 14 )
expand = true

[node name="VBox" type="VBoxContainer" parent="VBox/HBoxMiddle"]
margin_left = 104.0
margin_right = 1816.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="RichTextLabel" parent="VBox/HBoxMiddle/VBox"]
margin_right = 1712.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true

[node name="Worlds" type="HBoxContainer" parent="VBox/HBoxMiddle/VBox"]
margin_top = 54.0
margin_right = 1712.0
margin_bottom = 618.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="VBox/HBoxMiddle/VBox"]
margin_top = 622.0
margin_right = 1712.0
margin_bottom = 672.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true

[node name="Center2" type="CenterContainer" parent="VBox/HBoxMiddle"]
margin_left = 1820.0
margin_right = 1920.0
margin_bottom = 672.0
rect_min_size = Vector2( 100, 300 )

[node name="Right" type="TextureButton" parent="VBox/HBoxMiddle/Center2"]
margin_left = 9.0
margin_top = 232.0
margin_right = 91.0
margin_bottom = 439.0
rect_min_size = Vector2( 82, 207 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxBottom" type="HBoxContainer" parent="VBox"]
margin_top = 880.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 200 )

[node name="Center" type="CenterContainer" parent="VBox/HBoxBottom"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Upload" type="TextureButton" parent="VBox/HBoxBottom/Center"]
margin_left = 29.0
margin_top = 34.0
margin_right = 170.0
margin_bottom = 166.0
rect_min_size = Vector2( 141, 132 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Control" type="Control" parent="VBox/HBoxBottom"]
margin_left = 204.0
margin_right = 762.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center2" type="CenterContainer" parent="VBox/HBoxBottom"]
margin_left = 766.0
margin_right = 1153.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 1

[node name="Option" type="TextureButton" parent="VBox/HBoxBottom/Center2"]
margin_top = 19.0
margin_right = 387.0
margin_bottom = 181.0
rect_min_size = Vector2( 387, 162 )
texture_normal = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="Control2" type="Control" parent="VBox/HBoxBottom"]
margin_left = 1157.0
margin_right = 1716.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center3" type="CenterContainer" parent="VBox/HBoxBottom"]
margin_left = 1720.0
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Download" type="TextureButton" parent="VBox/HBoxBottom/Center3"]
margin_left = 40.0
margin_top = 37.0
margin_right = 160.0
margin_bottom = 163.0
rect_min_size = Vector2( 120, 126 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="SharedWorlds" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="SharedWorlds"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Control" parent="SharedWorlds/VBox"]
margin_right = 1920.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="Center" type="CenterContainer" parent="SharedWorlds/VBox/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="SharedWorlds/VBox/Header/Center"]
margin_left = 708.0
margin_top = 24.0
margin_right = 1212.0
margin_bottom = 125.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="SharedWorlds/VBox/Header/Center/VBox"]
margin_right = 504.0
margin_bottom = 47.0
rect_min_size = Vector2( 504, 47 )
texture = ExtResource( 22 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="SharedWorlds/VBox/Header/Center/VBox"]
margin_top = 51.0
margin_right = 504.0
margin_bottom = 101.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="SharedWorlds/VBox/Header/Center/VBox/HBox"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="Label" type="RichTextLabel" parent="SharedWorlds/VBox/Header/Center/VBox/HBox"]
margin_left = 54.0
margin_right = 450.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/normal_font = ExtResource( 21 )

[node name="Right" type="TextureButton" parent="SharedWorlds/VBox/Header/Center/VBox/HBox"]
margin_left = 454.0
margin_right = 504.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="HBox" type="HBoxContainer" parent="SharedWorlds/VBox/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="SharedWorlds/VBox/Header/HBox"]
margin_right = 20.0
margin_bottom = 150.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 1

[node name="Back" type="TextureButton" parent="SharedWorlds/VBox/Header/HBox"]
margin_left = 24.0
margin_right = 132.0
margin_bottom = 150.0
rect_min_size = Vector2( 108, 102 )
texture_normal = ExtResource( 23 )
expand = true
stretch_mode = 5

[node name="UpArrow" type="HBoxContainer" parent="SharedWorlds/VBox"]
margin_top = 154.0
margin_right = 1920.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 100 )

[node name="Spacer" type="Control" parent="SharedWorlds/VBox/UpArrow"]
margin_right = 1819.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Up" type="TextureButton" parent="SharedWorlds/VBox/UpArrow"]
margin_left = 1823.0
margin_right = 1920.0
margin_bottom = 100.0
texture_normal = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Worlds" type="VBoxContainer" parent="SharedWorlds/VBox"]
margin_top = 258.0
margin_right = 1920.0
margin_bottom = 976.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DownArrow" type="HBoxContainer" parent="SharedWorlds/VBox"]
margin_top = 980.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 100 )

[node name="Spacer" type="Control" parent="SharedWorlds/VBox/DownArrow"]
margin_right = 1819.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Down" type="TextureButton" parent="SharedWorlds/VBox/DownArrow"]
margin_left = 1823.0
margin_right = 1920.0
margin_bottom = 100.0
texture_normal = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="VBox/HBoxTop/Center/Delete" to="VBox" method="_on_delete_button_down"]
[connection signal="button_up" from="VBox/HBoxTop/Center/Delete" to="VBox" method="_on_delete_button_up"]
[connection signal="pressed" from="VBox/HBoxTop/Center/Delete" to="VBox" method="_on_delete_pressed"]
[connection signal="button_down" from="VBox/HBoxTop/Center2/Create" to="VBox" method="_on_create_button_down"]
[connection signal="button_up" from="VBox/HBoxTop/Center2/Create" to="VBox" method="_on_create_button_up"]
[connection signal="button_down" from="VBox/HBoxMiddle/Center/Left" to="VBox" method="_on_left_button_down"]
[connection signal="button_up" from="VBox/HBoxMiddle/Center/Left" to="VBox" method="_on_left_button_up"]
[connection signal="button_down" from="VBox/HBoxMiddle/Center2/Right" to="VBox" method="_on_right_button_down"]
[connection signal="button_up" from="VBox/HBoxMiddle/Center2/Right" to="VBox" method="_on_right_button_up"]
[connection signal="button_down" from="VBox/HBoxBottom/Center/Upload" to="VBox" method="_on_upload_button_down"]
[connection signal="button_up" from="VBox/HBoxBottom/Center/Upload" to="VBox" method="_on_upload_button_up"]
[connection signal="button_down" from="VBox/HBoxBottom/Center2/Option" to="VBox" method="_on_option_button_down"]
[connection signal="button_up" from="VBox/HBoxBottom/Center2/Option" to="VBox" method="_on_option_button_up"]
[connection signal="button_down" from="VBox/HBoxBottom/Center3/Download" to="VBox" method="_on_download_button_down"]
[connection signal="button_up" from="VBox/HBoxBottom/Center3/Download" to="VBox" method="_on_download_button_up"]
[connection signal="button_down" from="SharedWorlds/VBox/Header/Center/VBox/HBox/Left" to="SharedWorlds" method="_on_left_button_down"]
[connection signal="button_up" from="SharedWorlds/VBox/Header/Center/VBox/HBox/Left" to="SharedWorlds" method="_on_left_button_up"]
[connection signal="button_down" from="SharedWorlds/VBox/Header/Center/VBox/HBox/Right" to="SharedWorlds" method="_on_right_button_down"]
[connection signal="button_up" from="SharedWorlds/VBox/Header/Center/VBox/HBox/Right" to="SharedWorlds" method="_on_right_button_up"]
[connection signal="button_down" from="SharedWorlds/VBox/Header/HBox/Back" to="SharedWorlds" method="_on_back_button_down"]
[connection signal="button_up" from="SharedWorlds/VBox/Header/HBox/Back" to="SharedWorlds" method="_on_back_button_up"]
